[gd_scene load_steps=11 format=2]

[ext_resource path="res://graphics/BotBG.png" type="Texture" id=1]
[ext_resource path="res://scenes/general/ChatBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/MessageViewer.gd" type="Script" id=3]
[ext_resource path="res://src/Chatbot.gd" type="Script" id=4]
[ext_resource path="res://font/Uberal-regular.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.258824, 0.27451, 0.290196, 1 )
border_width_left = 3
border_color = Color( 0.258824, 0.27451, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.258824, 0.27451, 0.290196, 1 )
border_width_left = 3
border_color = Color( 0.258824, 0.27451, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.258824, 0.27451, 0.290196, 1 )
border_width_left = 3
border_color = Color( 0.258824, 0.27451, 0.290196, 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 678, 1060 )
modulate_color = Color( 1, 1, 1, 0.580392 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
botBubbleColor = Color( 0.3, 0.54, 0.9, 1 )
userBubbleColor = Color( 0.329412, 0.843137, 0.45098, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -344.0
margin_top = -565.0
color = Color( 0.262745, 0.27451, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messager" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -339.0
margin_top = -560.0
color = Color( 0.847059, 0.847059, 0.847059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditor" type="LineEdit" parent="Messager"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
custom_colors/selection_color = Color( 0.180392, 0.729412, 1, 1 )
custom_colors/cursor_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
placeholder_text = "Nachricht hier eingeben..."
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageViewer" type="ScrollContainer" parent="Messager"]
anchor_right = 1.0
anchor_bottom = 0.946
margin_right = -3.05176e-05
margin_bottom = 0.23999
custom_styles/bg = SubResource( 6 )
follow_focus = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageContainer" type="VBoxContainer" parent="Messager/MessageViewer"]
margin_right = 12.0
margin_bottom = 26.0

[node name="ChatBubble2" parent="Messager/MessageViewer/MessageContainer" instance=ExtResource( 2 )]
margin_bottom = 26.0
align = 0
bubbleColor = Color( 0.3, 0.54, 0.9, 1 )
bubbleSize = Vector2( 250, 40 )
bubbleMessage = "Hallo. Hast du Fragen zu den Anmeldevoraussetzungen, den Abteilungen oder den Schnuppertagen? Tippe die Begriffe ein, über die du mehr erfahren möchtest."

[node name="BotAnswerTimer" type="Timer" parent="."]
one_shot = true

[connection signal="text_entered" from="Messager/TextEditor" to="." method="_on_TextEditor_text_entered"]
[connection signal="timeout" from="BotAnswerTimer" to="." method="_on_BotAnswerTimer_timeout"]
